--- a/pom.xml
+++ b/pom.xml
@@ -24,12 +24,13 @@
     <!-- 仓库搜索 https://mvnrepository.com -->
     <dependencies>
 
-        <!-- https://mvnrepository.com/artifact/tk.mybatis/mapper -->
+        <!-- https://mvnrepository.com/artifact/tk.mybatis/mapper-spring-boot-starter -->
         <dependency>
             <groupId>tk.mybatis</groupId>
-            <artifactId>mapper</artifactId>
+            <artifactId>mapper-spring-boot-starter</artifactId>
             <version>4.2.2</version>
         </dependency>
+
 
 
         <dependency>
